# optimization

./: .gitignore  README.MD
ants/: CMakeLists.txt  README.md  ants.conf  antssimulator.cpp  antssimulator.h  data.matrix  data2.matrix.save  main.cpp
ants_UI/: ants  data3.matrix  ui.py
art/: CMakeLists.txt  README.md  artclustering.cpp  artclustering.h  clustering.conf  data.matrix  data2.matrix  dataloader.cpp  dataloader.h  main.cpp
config/: CMakeLists.txt  config.h
genetic/: CMakeLists.txt  GeneticSimulator.cpp  GeneticSimulator.h  data2.matrix  genetic.conf  main.cpp
genetic_UI/: ants  drawing_math.py  genetic  main.py  run_executable.py  ui.py
matrix/: CMakeLists.txt  matrix.h
nn/: CMakeLists.txt  functional.cpp  functional.h  layer_options.cpp  layer_options.h  nn.cpp  nn.h
nn/core/: functional.cpp  functional.h  layer.cpp  layer.h  loss.cpp  loss.h  nn.cpp  nn.h
nn/metrics/: metric.cpp  metric.h
nn/numerical/: numerical.cpp  numerical.h
nn/optimization/: optimization.cpp  optimization.h  sgd.cpp  sgd.h
nn_py/: .requirements.txt  main.py  train.py  ui.py
nn_py/nn/: functional.py  layer.py  metrics.py  nn.py  optim.py
nn_py/utils/: img.py  utils.py
nn_vision/: CMakeLists.txt  main.cpp  nn_test.cpp  nn_test.h
py_utils/utils/: run_executable.py
queens_UI/: annealing.conf  main.py  queens_adapter.py  queens_solver  test.py  ui.py
queens_simulated_annealing/: CMakeLists.txt  QueensAnnealingSolver.h  README.md  annealing.conf  main.cpp  objects.h  queens.conf  utils.h
utils/: CMakeLists.txt  dataloader.cpp  utils.cpp  utils.h
